# bookmark-language

./: Cargo.toml
examples/: fib.rs
src/: instruction.rs  lib.rs  program.rs  value.rs  variable.rs
src/instruction/: loading.rs  meta.rs  mutating.rs  pure.rs  reading.rs  set_macro.rs  stack.rs  traits.rs
